manifest/k8s/deployment-template.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $BITBUCKET_REPO_SLUG
  labels:
    app: $BITBUCKET_REPO_SLUG
  namespace: $K8S_NAMESPACE
  annotations:
    reloader.stakater.com/auto: "true"
    secret.reloader.stakater.com/reload: $BITBUCKET_REPO_SLUG
spec:
  replicas: $K8S_NUMBER_OF_REPLICAS
  selector:
    matchLabels:
      app: $BITBUCKET_REPO_SLUG
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: $BITBUCKET_REPO_SLUG
    spec:
      containers:
        - name: $BITBUCKET_REPO_SLUG
          image: $DOCKER_ECR_REPO_URL/$BITBUCKET_REPO_SLUG:$BITBUCKET_BRANCH.$BITBUCKET_COMMIT
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "$K8S_REQUESTS_CPU"
              memory: "$K8S_REQUESTS_MEMORY"
            limits:
              cpu: "$K8S_LIMITS_CPU"
              memory: "$K8S_LIMITS_MEMORY"
          ports:
            - containerPort: 8000
          startupProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 3
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 0
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
            timeoutSeconds: 1
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 0
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 3
            timeoutSeconds: 1
      nodeSelector:
        alpha.eksctl.io/nodegroup-name: pontaltech-eks-${BITBUCKET_DEPLOYMENT_ENVIRONMENT}-${K8S_NODEGROUP_SUFFIX}
